--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 						<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseIos" aria-expanded="false" aria-controls="collapseIos">
 							<i class="bi bi-apple mb-2"></i>
 							<span class="d-block w-100 text-center">
-								iOS / macOS
+								iOS / macOSSSSSSS
 							</span>
 						</button>
 					</h2>
