--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 				document.getElementById("href-ios-shadowrocket").href = `sub://${link64}`;
 				document.getElementById("href-ios-singbox").href = `sing-box://import-remote-profile?url=${linkFull}#` + serviceName;
 				document.getElementById("href-ios-happ").href = `happ://add/${linkFull}`;
+				document.getElementById("href-ios-v2raytun").href = `v2raytun://import/${linkFull}#` + serviceName;
 				document.getElementById("href-android-hiddify").href = `hiddify://import/${linkFull}`;
 				document.getElementById("href-android-v2rayng").href = `v2rayng://install-config?url=${linkFull}&name=` + serviceName;
 				document.getElementById("href-android-v2raytun").href = `v2raytun://import/${linkFull}#` + serviceName;
@@ -658,6 +659,33 @@
 									</div>
 								</div>
 								<hr class="m-0">
+
+								<div class="accordion-item">
+									<h2 class="accordion-header">
+									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
+											<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
+											<span class="d-block w-100 text-center">
+												V2RayTun
+											</span>
+										</button>
+									</h2>
+									<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroidAltList">
+										<div class="container pb-4">
+											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
+											<p x-text="$t('getAppDescription')"></p>
+											<a href="https://apps.apple.com/ru/app/v2raytun/id6476628951">
+												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
+											</a>
+											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
+											<p x-text="$t('addConfigDescription')"></p>
+											<a id="href-ios-v2raytun">
+												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+											</a>
+										</div>
+									</div>
+								</div>
+								<hr class="m-0">
+
 								<div class="accordion-item">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosAlt" aria-expanded="false" aria-controls="collapseOsIosAlt">
