--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#happ"></use></svg>
 											<span class="d-block w-100 text-center">
-												Happ 🔥
+												Happ123 🔥
 											</span>
 										</button>
 									</h2>
@@ -669,7 +669,7 @@
 											</span>
 										</button>
 									</h2>
-									<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroidAltList">
+									<div id="collapseOsIosAlt" class="accordion-collapse collapse" data-bs-parent="#accordionOsIos">
 										<div class="container pb-4">
 											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 											<p x-text="$t('getAppDescription')"></p>
