--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#happ"></use></svg>
 											<span class="d-block w-100 text-center">
-												Happ123 🔥
+												Hap12123 🔥
 											</span>
 										</button>
 									</h2>
@@ -662,32 +662,6 @@
 
 								<div class="accordion-item">
 									<h2 class="accordion-header">
-									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
-											<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
-											<span class="d-block w-100 text-center">
-												V2RayTun
-											</span>
-										</button>
-									</h2>
-									<div id="collapseOsIosAlt" class="accordion-collapse collapse" data-bs-parent="#accordionOsIos">
-										<div class="container pb-4">
-											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
-											<p x-text="$t('getAppDescription')"></p>
-											<a href="https://apps.apple.com/ru/app/v2raytun/id6476628951">
-												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
-											</a>
-											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
-											<p x-text="$t('addConfigDescription')"></p>
-											<a id="href-ios-v2raytun">
-												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-											</a>
-										</div>
-									</div>
-								</div>
-								<hr class="m-0">
-
-								<div class="accordion-item">
-									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosAlt" aria-expanded="false" aria-controls="collapseOsIosAlt">
 											<i class="bi bi-plus-circle-fill mb-2"></i>
 											<span class="d-block w-100 text-center" x-text="$t('otherApps')"></span>
@@ -696,6 +670,33 @@
 									<div id="collapseOsIosAlt" class="accordion-collapse collapse" data-bs-parent="#accordionOsIos">
 										<p x-text="$t('selectApp')"></p>
 										<div class="accordion mt-2" id="accordionOsIosAltList">
+
+											<div class="accordion-item">
+												<h2 class="accordion-header">
+												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
+														<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
+														<span class="d-block w-100 text-center">
+															V2RayTun
+														</span>
+													</button>
+												</h2>
+												<div id="collapseOsIosAlt" class="accordion-collapse collapse" data-bs-parent="#accordionOsIos">
+													<div class="container pb-4">
+														<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
+														<p x-text="$t('getAppDescription')"></p>
+														<a href="https://apps.apple.com/ru/app/v2raytun/id6476628951">
+															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
+														</a>
+														<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
+														<p x-text="$t('addConfigDescription')"></p>
+														<a id="href-ios-v2raytun">
+															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+														</a>
+													</div>
+												</div>
+											</div>
+											<hr class="m-0">
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosStreisand" aria-expanded="false" aria-controls="collapseOsIosStreisand">
