--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#happ"></use></svg>
 											<span class="d-block w-100 text-center">
-												Hap12123 🔥
+												1Hap12123 🔥
 											</span>
 										</button>
 									</h2>
