--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 						<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseIos" aria-expanded="false" aria-controls="collapseIos">
 							<i class="bi bi-apple mb-2"></i>
 							<span class="d-block w-100 text-center">
-								iOS / macOSSSSSSS
+								iOS / macOS
 							</span>
 						</button>
 					</h2>
@@ -625,9 +625,9 @@
 								<div class="accordion-item">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
-											<svg class="my-icon"><use href="#happ"></use></svg>
+											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												1Hap12123 🔥
+												V2RayTun 🔥
 											</span>
 										</button>
 									</h2>
@@ -636,15 +636,15 @@
 											<p><span x-text="$t('needVersion')"></span> <b class="fw-bold">iOS 15+</b></p>
 											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 											<p x-text="$t('getAppDescription')"></p>
-											<a href="https://apps.apple.com/ru/app/happ-proxy-utility-plus/id6746188973">
+											<a href="https://apps.apple.com/ru/app/v2raytun/id6476628951">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
 											</a>
 											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 											<p x-text="$t('addConfigDescription')"></p>
-											<a id="href-ios-happ">
+											<a id="href-ios-v2raytun">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 											</a>
-											<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
+											<!-- <p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
 											<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingRoscomVPN')"></p>
 											<p x-text="$t('addConfigDescription')"></p>
 											<a id="href-ios-happ-RoscomVPN">
@@ -654,7 +654,7 @@
 											<p x-text="$t('addConfigDescription')"></p>
 											<a id="href-ios-happ-ReFilter">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-											</a>
+											</a> -->
 										</div>
 									</div>
 								</div>
@@ -671,7 +671,7 @@
 										<p x-text="$t('selectApp')"></p>
 										<div class="accordion mt-2" id="accordionOsIosAltList">
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
 														<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
@@ -695,7 +695,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
@@ -723,7 +723,8 @@
 												</div>
 											</div>
 											<hr class="m-0">
-											<div class="accordion-item">
+
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosFoxray" aria-expanded="false" aria-controls="collapseOsIosFoxray">
 														<svg class="my-icon"><use href="#foxray"></use></svg>
@@ -748,7 +749,8 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosV2box" aria-expanded="false" aria-controls="collapseOsIosV2box">
@@ -776,6 +778,7 @@
 												</div>
 											</div>
 											<hr class="m-0">
+<!-- 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosShadowrocket" aria-expanded="false" aria-controls="collapseOsIosShadowrocket">
@@ -801,8 +804,9 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
-											<div class="accordion-item">
+											<hr class="m-0"> -->
+
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosSingbox" aria-expanded="false" aria-controls="collapseOsIosSingbox">
 														<svg class="my-icon"><use href="#singbox"></use></svg>
@@ -826,8 +830,9 @@
 														</a>
 													</div>
 												</div>
-											</div>
-											<hr class="m-0">
+											</div> -->
+											<!-- <hr class="m-0">
+
 											<div class="accordion-item">
 												<hr class="m-0">
 												<h2 class="accordion-header">
@@ -857,7 +862,8 @@
 														<p x-text="$t('hiddifyAdditional3')"></p>
 													</div>
 												</div>
-											</div>
+											</div> -->
+
 										</div>
 									</div>
 								</div>
