--- a/index.html
+++ b/index.html
@@ -624,14 +624,14 @@
 								<hr class="m-0">
 								<div class="accordion-item">
 									<h2 class="accordion-header">
-										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
+										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosV2RayTun" aria-expanded="false" aria-controls="collapseOsIosV2RayTun">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun 🔥
+												V2RayTu1n 🔥
 											</span>
 										</button>
 									</h2>
-									<div id="collapseOsIosHapp" class="accordion-collapse collapse show" data-bs-parent="#accordionOsIos">
+									<div id="collapseOsIosV2RayTun" class="accordion-collapse collapse show" data-bs-parent="#accordionOsIos">
 										<div class="container pb-4">
 											<p><span x-text="$t('needVersion')"></span> <b class="fw-bold">iOS 15+</b></p>
 											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
