--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 						<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseIos" aria-expanded="false" aria-controls="collapseIos">
 							<i class="bi bi-apple mb-2"></i>
 							<span class="d-block w-100 text-center">
-								iOS / macOSs
+								iOS / macOSSSSSSS
 							</span>
 						</button>
 					</h2>
@@ -624,14 +624,14 @@
 								<hr class="m-0">
 								<div class="accordion-item">
 									<h2 class="accordion-header">
-										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosV2RayTun" aria-expanded="false" aria-controls="collapseOsIosV2RayTun">
+										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTu1n 🔥
+												V2RayTun2 🔥
 											</span>
 										</button>
 									</h2>
-									<div id="collapseOsIosV2RayTun" class="accordion-collapse collapse show" data-bs-parent="#accordionOsIos">
+									<div id="collapseOsIosHapp" class="accordion-collapse collapse show" data-bs-parent="#accordionOsIos">
 										<div class="container pb-4">
 											<p><span x-text="$t('needVersion')"></span> <b class="fw-bold">iOS 15+</b></p>
 											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
@@ -641,10 +641,10 @@
 											</a>
 											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 											<p x-text="$t('addConfigDescription')"></p>
-											<a id="href-ios-v2raytun">
+											<a id="href-ios-happ">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 											</a>
-											<!-- <p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
+											<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
 											<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingRoscomVPN')"></p>
 											<p x-text="$t('addConfigDescription')"></p>
 											<a id="href-ios-happ-RoscomVPN">
@@ -654,7 +654,7 @@
 											<p x-text="$t('addConfigDescription')"></p>
 											<a id="href-ios-happ-ReFilter">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-											</a> -->
+											</a>
 										</div>
 									</div>
 								</div>
@@ -671,7 +671,7 @@
 										<p x-text="$t('selectApp')"></p>
 										<div class="accordion mt-2" id="accordionOsIosAltList">
 
-											<!-- <div class="accordion-item">
+											<div class="accordion-item">
 												<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
 														<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
@@ -695,7 +695,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0"> -->
+											<hr class="m-0">
 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
@@ -723,8 +723,7 @@
 												</div>
 											</div>
 											<hr class="m-0">
-
-											<!-- <div class="accordion-item">
+											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosFoxray" aria-expanded="false" aria-controls="collapseOsIosFoxray">
 														<svg class="my-icon"><use href="#foxray"></use></svg>
@@ -749,8 +748,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0"> -->
-
+											<hr class="m-0">
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosV2box" aria-expanded="false" aria-controls="collapseOsIosV2box">
@@ -778,7 +776,6 @@
 												</div>
 											</div>
 											<hr class="m-0">
-<!-- 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosShadowrocket" aria-expanded="false" aria-controls="collapseOsIosShadowrocket">
@@ -804,9 +801,8 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0"> -->
-
-											<!-- <div class="accordion-item">
+											<hr class="m-0">
+											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosSingbox" aria-expanded="false" aria-controls="collapseOsIosSingbox">
 														<svg class="my-icon"><use href="#singbox"></use></svg>
@@ -830,9 +826,8 @@
 														</a>
 													</div>
 												</div>
-											</div> -->
-											<!-- <hr class="m-0">
-
+											</div>
+											<hr class="m-0">
 											<div class="accordion-item">
 												<hr class="m-0">
 												<h2 class="accordion-header">
@@ -862,8 +857,7 @@
 														<p x-text="$t('hiddifyAdditional3')"></p>
 													</div>
 												</div>
-											</div> -->
-
+											</div>
 										</div>
 									</div>
 								</div>
