--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun2 🔥
+												V2RayTun3 🔥
 											</span>
 										</button>
 									</h2>
@@ -641,7 +641,7 @@
 											</a>
 											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 											<p x-text="$t('addConfigDescription')"></p>
-											<a id="href-ios-happ">
+											<a id="href-ios-v2raytun">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 											</a>
 											<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
