--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
 				document.getElementById("href-ios-singbox").href = `sing-box://import-remote-profile?url=${linkFull}#` + serviceName;
 				document.getElementById("href-ios-happ").href = `happ://add/${linkFull}`;
 				document.getElementById("href-ios-v2raytun").href = `v2raytun://import/${linkFull}#` + serviceName;
+				document.getElementById("href-ios-v2raytun-alt").href = `v2raytun://import/${linkFull}#` + serviceName;
 				document.getElementById("href-android-hiddify").href = `hiddify://import/${linkFull}`;
 				document.getElementById("href-android-v2rayng").href = `v2rayng://install-config?url=${linkFull}&name=` + serviceName;
 				document.getElementById("href-android-v2raytun").href = `v2raytun://import/${linkFull}#` + serviceName;
@@ -627,7 +628,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun33 🔥
+												V2RayTun4 🔥
 											</span>
 										</button>
 									</h2>
@@ -689,7 +690,7 @@
 														</a>
 														<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 														<p x-text="$t('addConfigDescription')"></p>
-														<a id="href-ios-v2raytun">
+														<a id="href-ios-v2raytun-alt">
 															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 														</a>
 													</div>
