--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun4422 🔥
+												V2RayTun55 🔥
 											</span>
 										</button>
 									</h2>
@@ -674,18 +674,19 @@
 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
-												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
+													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosStreisand" aria-expanded="false" aria-controls="collapseOsIosStreisand">
 														<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
 														<span class="d-block w-100 text-center">
 															V2RayTun
 														</span>
 													</button>
 												</h2>
-												<div id="collapseOsIosAlt" class="accordion-collapse collapse" data-bs-parent="#accordionOsIos">
+												<div id="collapseOsIosStreisand" class="accordion-collapse collapse" data-bs-parent="#accordionOsIosAltList">
 													<div class="container pb-4">
+														<p><span x-text="$t('needVersion')"></span> <b class="fw-bold">iOS 14+</b></p>
 														<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 														<p x-text="$t('getAppDescription')"></p>
-														<a href="https://apps.apple.com/ru/app/v2raytun/id6476628951">
+														<a href="https://apps.apple.com/us/app/streisand/id6450534064">
 															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
 														</a>
 														<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
@@ -696,7 +697,6 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
@@ -724,6 +724,7 @@
 												</div>
 											</div>
 											<hr class="m-0">
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosFoxray" aria-expanded="false" aria-controls="collapseOsIosFoxray">
