--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 						<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseIos" aria-expanded="false" aria-controls="collapseIos">
 							<i class="bi bi-apple mb-2"></i>
 							<span class="d-block w-100 text-center">
-								iOS / macOSSSSSSS
+								iOS / macOS
 							</span>
 						</button>
 					</h2>
@@ -641,7 +641,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun60 🔥
+												V2RayTun 🔥
 											</span>
 										</button>
 									</h2>
@@ -658,7 +658,7 @@
 											<a id="href-ios-v2raytun">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 											</a>
-											<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
+											<!-- <p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
 											<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingRoscomVPN')"></p>
 											<p x-text="$t('addConfigDescription')"></p>
 											<a id="href-ios-happ-RoscomVPN">
@@ -668,7 +668,7 @@
 											<p x-text="$t('addConfigDescription')"></p>
 											<a id="href-ios-happ-ReFilter">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-											</a>
+											</a> -->
 										</div>
 									</div>
 								</div>
@@ -685,7 +685,7 @@
 										<p x-text="$t('selectApp')"></p>
 										<div class="accordion mt-2" id="accordionOsIosAltList">
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosStreisand" aria-expanded="false" aria-controls="collapseOsIosStreisand">
 														<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
@@ -710,6 +710,7 @@
 													</div>
 												</div>
 											</div>
+											<hr class="m-0"> -->
 
 											<div class="accordion-item">
 												<h2 class="accordion-header">
@@ -738,7 +739,7 @@
 											</div>
 											<hr class="m-0">
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosFoxray" aria-expanded="false" aria-controls="collapseOsIosFoxray">
 														<svg class="my-icon"><use href="#foxray"></use></svg>
@@ -763,7 +764,8 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosV2box" aria-expanded="false" aria-controls="collapseOsIosV2box">
@@ -791,7 +793,8 @@
 												</div>
 											</div>
 											<hr class="m-0">
-											<div class="accordion-item">
+
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosShadowrocket" aria-expanded="false" aria-controls="collapseOsIosShadowrocket">
 														<svg class="my-icon"><use href="#shadowrocket"></use></svg>
@@ -816,7 +819,8 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosSingbox" aria-expanded="false" aria-controls="collapseOsIosSingbox">
@@ -843,6 +847,7 @@
 												</div>
 											</div>
 											<hr class="m-0">
+
 											<div class="accordion-item">
 												<hr class="m-0">
 												<h2 class="accordion-header">
@@ -873,6 +878,7 @@
 													</div>
 												</div>
 											</div>
+
 										</div>
 									</div>
 								</div>
@@ -893,12 +899,37 @@
 						<div class="accordion-body m-0 p-0 pb-2">
 							<div class="accordion" id="accordionOsAndroid">
 								<div class="accordion-item">
+									<h2 class="accordion-header">
+									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
+											<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
+											<span class="d-block w-100 text-center">
+												V2RayTun 🔥
+											</span>
+										</button>
+									</h2>
+									<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroidAltList">
+										<div class="container pb-4">
+											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
+											<p x-text="$t('getAppDescription')"></p>
+											<a href="https://play.google.com/store/apps/details?id=com.v2raytun.android">
+												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
+											</a>
+											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
+											<p x-text="$t('addConfigDescription')"></p>
+											<a id="href-android-v2raytun">
+												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+											</a>
+										</div>
+									</div>
+								</div>
+
+								<!-- <div class="accordion-item">
 									<hr class="m-0">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsAndroidHiddify" aria-expanded="false" aria-controls="accordionOsAndroidHiddify">
 											<svg class="my-icon-small"><use href="#hiddify"></use></svg>
 											<span class="d-block w-100 text-center">
-												Hiddify🔥
+												Hiddify
 											</span>
 										</button>
 									</h2>
@@ -920,7 +951,8 @@
 											<p x-text="$t('hiddifyAdditional3')"></p>
 										</div>
 									</div>
-								</div>
+								</div> -->
+
 								<hr class="m-0">
 								<div class="accordion-item">
 									<h2 class="accordion-header">
@@ -932,6 +964,7 @@
 									<div id="accordionOsAndroidAlt" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroid">
 										<p x-text="$t('selectApp')"></p>
 										<div class="accordion mt-2" id="accordionOsAndroidAltList">
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsAndroidV2rayng" aria-expanded="false" aria-controls="accordionOsAndroidV2rayng">
@@ -965,34 +998,10 @@
 														</div>
 													</div>
 												</div>
-											</div>
+											</div>	
 											<hr class="m-0">
-											<div class="accordion-item">
-												<h2 class="accordion-header">
-												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
-														<svg class="my-icon-small"><use href="#v2rayng"></use></svg>
-														<span class="d-block w-100 text-center">
-															V2RayTun
-														</span>
-													</button>
-												</h2>
-												<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroidAltList">
-													<div class="container pb-4">
-														<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
-														<p x-text="$t('getAppDescription')"></p>
-														<a href="https://play.google.com/store/apps/details?id=com.v2raytun.android">
-															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
-														</a>
-														<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
-														<p x-text="$t('addConfigDescription')"></p>
-														<a id="href-android-v2raytun">
-															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-														</a>
-													</div>
-												</div>
-											</div>
-											<hr class="m-0">
-											<div class="accordion-item">
+
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsAndroidCMFA" aria-expanded="false" aria-controls="accordionOsAndroidCMFA">
 														<svg class="my-icon"><use href="#clash-meta"></use></svg>
@@ -1018,7 +1027,8 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
+
 											<div class="accordion-item">
 												<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidSingbox" aria-expanded="false" aria-controls="collapseOsAndroidSingbox">
@@ -1044,7 +1054,8 @@
 												</div>
 											</div>
 											<hr class="m-0">
-											<div class="accordion-item">
+
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidHapp" aria-expanded="false" aria-controls="collapseOsAndroidHapp">
 														<svg class="my-icon"><use href="#happ"></use></svg>
@@ -1078,7 +1089,8 @@
 														</a>
 													</div>
 												</div>
-											</div>
+											</div> -->
+
 										</div>
 									</div>
 								</div>
