--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun 🔥
+												V2RayTun1 🔥
 											</span>
 										</button>
 									</h2>
@@ -848,7 +848,7 @@
 											</div>
 											<hr class="m-0">
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<hr class="m-0">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHiddify" aria-expanded="false" aria-controls="collapseOsIosHiddify">
@@ -877,7 +877,7 @@
 														<p x-text="$t('hiddifyAdditional3')"></p>
 													</div>
 												</div>
-											</div>
+											</div> -->
 
 										</div>
 									</div>
@@ -907,7 +907,7 @@
 											</span>
 										</button>
 									</h2>
-									<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroidAltList">
+									<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse show" data-bs-parent="#accordionOsAndroidAltList">
 										<div class="container pb-4">
 											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 											<p x-text="$t('getAppDescription')"></p>
