--- a/index.html
+++ b/index.html
@@ -558,14 +558,14 @@
 							</button>
 							<ul class="dropdown-menu my-dropdown-menu">
 								<li>
-									<button class="dropdown-item active d-flex align-items-center fw-semibold justify-content-between" type="button" data-language-value="en">
-										<span class="me-2">English</span>
+									<button class="dropdown-item active d-flex align-items-center fw-semibold justify-content-between" type="button" data-language-value="ru">
+										<span class="me-2">Русский</span>
 										<i class="bi my-dropdown-item-check bi-check2 mb-2"></i>
 									</button>
 								</li>
 								<li>
-									<button class="dropdown-item d-flex align-items-center fw-semibold justify-content-between" type="button" data-language-value="ru">
-										<span class="me-2">Русский</span>
+									<button class="dropdown-item  d-flex align-items-center fw-semibold justify-content-between" type="button" data-language-value="en">
+										<span class="me-2">English</span>
 										<i class="bi my-dropdown-item-check bi-check2 mb-2"></i>
 									</button>
 								</li>
@@ -641,7 +641,7 @@
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
 											<svg class="my-icon"><use href="#v2rayng"></use></svg>
 											<span class="d-block w-100 text-center">
-												V2RayTun1 🔥
+												V2RayTun 🔥
 											</span>
 										</button>
 									</h2>
