--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 			<header class="d-flex flex-wrap align-items-center gap-2 mb-5 justify-content-between">
 				<img src="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/logo.png" alt="Logo" width="32" height="32">
 				<ul class="nav align-items-center">
-					<li class="nav-item"><a class="nav-link my-nav-link fw-semibold px-2" id="href-support" rel="noopener noreferrer" target="_blank" x-text="$t('support')"></a></li>
+					<!-- <li class="nav-item"><a class="nav-link my-nav-link fw-semibold px-2" id="href-support" rel="noopener noreferrer" target="_blank" x-text="$t('support')"></a></li> -->
 					<li class="nav-item">
 						<div class="dropdown">
 							<button class="nav-link my-nav-link dropdown-toggle d-flex align-items-center px-2" id="btn-lang" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -712,7 +712,7 @@
 											</div>
 											<hr class="m-0"> -->
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosStreisand" aria-expanded="false" aria-controls="collapseOsIosStreisand">
 														<svg class="my-icon"><use href="#streisand"></use></svg>
@@ -737,7 +737,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
 
 											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
@@ -1421,7 +1421,7 @@
 				<p x-text="$t('faq2')"></p>
 			</div>
 			
-			<a id="href-donate"><button type="button" class="btn my-btn mt-4 w-100" x-text="$t('donate')"></button></a>
+			<!-- <a id="href-donate"><button type="button" class="btn my-btn mt-4 w-100" x-text="$t('donate')"></button></a> -->
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
