--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 											</div>
 											<hr class="m-0"> -->
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosSingbox" aria-expanded="false" aria-controls="collapseOsIosSingbox">
 														<svg class="my-icon"><use href="#singbox"></use></svg>
@@ -846,7 +846,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
 
 											<!-- <div class="accordion-item">
 												<hr class="m-0">
