fix: hide singbox for android

--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
 											</div>
 											<hr class="m-0"> -->
 
-											<div class="accordion-item">
+											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
 												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidSingbox" aria-expanded="false" aria-controls="collapseOsAndroidSingbox">
 														<svg class="my-icon"><use href="#singbox"></use></svg>
@@ -1053,7 +1053,7 @@
 													</div>
 												</div>
 											</div>
-											<hr class="m-0">
+											<hr class="m-0"> -->
 
 											<!-- <div class="accordion-item">
 												<h2 class="accordion-header">
